k8s/booking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: cleaning-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-service
        image: 439891535932.dkr.ecr.us-east-1.amazonaws.com/booking-service:latest
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: cleaning-app
spec:
  selector:
    app: booking-service
  ports:
  - port: 5002
    targetPort: 5002
  type: ClusterIP
