k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: cleaning-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: 439891535932.dkr.ecr.us-east-1.amazonaws.com/payment-service:latest
        ports:
        - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: cleaning-app
spec:
  selector:
    app: payment-service
  ports:
  - port: 5004
    targetPort: 5004
  type: ClusterIP
