k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: cleaning-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: 439891535932.dkr.ecr.us-east-1.amazonaws.com/user-service:latest
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: cleaning-app
spec:
  selector:
    app: user-service
  ports:
  - port: 5001
    targetPort: 5001
  type: ClusterIP
